añadimos propiedades css: tamaños, margen, padding, border, background

--- a/style_cascada.css
+++ b/style_cascada.css
@@ -11,6 +11,14 @@
 .clase1 {background-color: blue;}
 div {background-color: red;}*/
 
+/*a {
+    color: green !important;
+    color: red !important;
+}*/
+
+/*.rojo {color: red}*/
+
+
 /* herencia */
 
 /*div {
