--- a/testcss_flexbox.css
+++ b/testcss_flexbox.css
@@ -1,22 +1,39 @@
-.padre-flex {
-    width: 500px;
+* {box-sizing: border-box;}
+
+.padre {
+    display: flex;
+    background-color: blue;
     height: 600px;
-    background-color: red;
-    display: flex;  
-    flex-direction: row;    
+    width: 80%;
+    flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;   
     
-   
+    /*justify-content: center;*/
+    /*justify-content: space-evenly;*/
+    /*align-items: strech;*/ /* por defecto */
+    /*align-content: normal;*/ /* por defecto */
+    /*align-items: flex-end;*/
+    
 }
 
-.hijo-flex {
-    font-size: 30px;
-    /*width: 100px;*/
-    width: 80px;
-    height: 80px;
+
+.hijo {
     border: 1px solid black;
-    background-color: green;
-    color:white;
+    background-color: yellow;
+    width: 100px;
+    height: 100px;  
+    /*flex-grow: 0;*/ /* defecto */
+    flex-shrink: 1;
 }
+
+.peque {
+    flex-shrink: 10;
+
+}
+
+
+
+
+
+
 
