--- a/testcss_flexbox.css
+++ b/testcss_flexbox.css
@@ -2,8 +2,14 @@
 
 .padre {   
     background-color: blue;
-    height: 500px;
+    height: 400px;
     width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    /*align-items: center;*/
+    
+    
 }
 
 
@@ -11,8 +17,35 @@
     border: 1px solid black;
     background-color: yellow;
     width: 100px;
-    height: 100px;      
+    height: 100px;
+    
+
+    /*width: 100px;*/    
+    /*flex-grow: 0;*//* por defecto 0 */ 
+    /*flex-shrink: 1;*/  /* por defecto 1 */    
+    /*flex-basis: 100px;*/
+
+    /*flex-basis: 100px;*/ /* = width (row) height (column)*/
+    /*width: 100px;*/
+    /*height: 100px;*/
+
+    /*flex-grow: 0;*//* por defecto 0 */ 
+    /*flex-shrink: 1;*/  /* por defecto 1 */    
+    /*flex-basis: 100px;*/
+
+    /*flex-basis: auto;*/
+
+    /*flex: 0 1 auto;*/
+
 }
+
+.abajo {
+    align-self: flex-end;
+}
+
+
+
+
 
 
 
