--- a/css/style.css
+++ b/css/style.css
@@ -5,88 +5,8 @@
 @import 'layout.css';
 @import 'text.css';
 @import 'grid.css';
+@import 'heading.css';
+@import 'image.css';
+@import 'nav.css';
+@import 'utils.css';
 
-
- /* barra de navegación */
-
-.nav-main ul {
-    display: flex;
-    color: grey;    
-}
-
-.nav-main li {
-    margin-right: .5em;      
-}
-
-.nav-main li:last-child {
-    margin-right: 0;
-}
-
-.nav-main a {
-    color: black;
-}
-
-.nav-main a:hover {
-    text-decoration: underline;
-}
-
-.nav-main .separator {
-    color: #ccc;
-}
-
-section {
-    
-}
-
-section img {
-    max-width: 100%;
-    height: auto;
-}
-
-aside {
-}
-
-
-/* main */
-/*.main-home {
-    display: flex;
-}*/
-
-
-/* section */
-/*.main-home section {
-    width: 70%;
-    
-    display: flex;
-    flex-wrap: wrap;
-    margin-left:-50px;
-}
-
-.main-home section img {
-    width: 100%;
-    height: auto;
-}
-
-.receta-full {
-    background-color: hotpink;
-    width: calc(50% - 50px);
-    margin-left: 50px;
-    margin-bottom: 5px;
-
-}*/
-
-/*.receta-full:nth-child(2n+1) {
-    margin-right: 0;
-}*/
-
-
-
-
-
-
-/* aside */
-
-/*.main-home aside {
-    width: 30%;
-    background-color: red;
-}*/
