--- a/css/text.css
+++ b/css/text.css
@@ -15,7 +15,7 @@
 }
 
 .fnt-lg {
-    font-size: 18px;
+    font-size: 18px; /* clamp */ 
 }
 
 .fnt-xl {
@@ -26,6 +26,23 @@
     font-size: 22px;
 }
 
+.fnt-xl3 {
+    font-size: 28px;
+}
+
+.fnt-xl4 {
+    font-size: 32px;
+}
+
+.fnt-xl5 {
+    font-size: 42px;
+}
+
 .txt-center {
     text-align: center;
+}
+
+.line-normal {
+    line-height: 1.4;
+    
 }
