--- a/css/basic.css
+++ b/css/basic.css
@@ -3,6 +3,10 @@
     font-family: 'Open Sans', sans-serif !important;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 a { 
     text-decoration: none;
     color: inherit;
